[gd_scene load_steps=6 format=2]

[ext_resource path="res://Montserrat-ExtraBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Algo.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 24
font_data = ExtResource( 1 )

[sub_resource type="Theme" id=2]

[sub_resource type="DynamicFont" id=3]
font_data = ExtResource( 1 )

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N_label" type="Label" parent="."]
margin_left = 39.0
margin_top = 28.0
margin_right = 146.0
margin_bottom = 72.0
custom_fonts/font = SubResource( 1 )
text = "Number of 
Elements  :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="N" type="LineEdit" parent="."]
margin_left = 202.0
margin_top = 35.0
margin_right = 332.0
margin_bottom = 88.0
align = 1
max_length = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Algo_label" type="Label" parent="."]
margin_left = 380.673
margin_top = 28.0
margin_right = 526.673
margin_bottom = 93.0
custom_fonts/font = SubResource( 1 )
text = "Sorting 
Algorithm :"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Algo" type="OptionButton" parent="."]
margin_left = 558.689
margin_top = 36.0
margin_right = 791.689
margin_bottom = 95.0
theme = SubResource( 2 )
custom_fonts/font = SubResource( 3 )
text = "Choose Algorithm"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="."]
margin_left = 913.722
margin_top = 38.0
margin_right = 1004.72
margin_bottom = 96.0
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
visible = false
margin_left = 46.0
margin_top = 136.454
margin_right = 1233.0
margin_bottom = 661.454
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DAPos_LT" type="Position2D" parent="."]
position = Vector2( 45.993, 135.925 )

[node name="DAPos_RB" type="Position2D" parent="."]
position = Vector2( 1233.06, 661.02 )

[node name="New data" type="Button" parent="."]
margin_left = 1065.03
margin_top = 37.0
margin_right = 1164.03
margin_bottom = 96.0
text = "New data"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="text_changed" from="N" to="." method="_on_N_text_changed"]
[connection signal="item_selected" from="Algo" to="." method="_on_Algo_item_selected"]
[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="New data" to="." method="_on_New_data_pressed"]
